# tantivy-py

./: .gitignore  Cargo.toml  Makefile  build-index-html.py  pyproject.toml
pep503/: index.html
pep503/tantivy-oc-fork/: index.html
src/: document.rs  facet.rs  index.rs  lib.rs  parser_error.rs  query.rs  schema.rs  schemabuilder.rs  searcher.rs  snippet.rs  tokenizers.rs
tantivy/: tantivy.pyi
tests/: conftest.py  tantivy_test.py
