[package]
name = "tantivy_oc_fork"
version = "0.14.0"
readme = "README.md"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"
license = "MIT"

[lib]
name = "tantivy"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.19"
tantivy = { git = "https://github.com/opencollector/tantivy", branch = "private-modifications", version = "0.16.0-dev" }
itertools = "0.9.0"
futures = "^0.3.15"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[package.metadata.maturin]
requires-python = ">=3.7"
project-url =  { Source = "https://github.com/tantivy-search/tantivy-py" }
